# Support-Agent

./: .gitignore  DESIGN.md  README.md  pyproject.toml  test_tickets.py
eval/: fuzz_policy.py  live_ollama_smoke.py
frontend/: vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: TicketResponse.tsx  TicketSubmission.tsx
src/support_agent/: api.py  dashboard.html  runner.py  service.py  types.py
src/support_agent/agent/: loop.py
src/support_agent/audit/: log.py
src/support_agent/llm/: base.py  fake.py  ollama_client.py
src/support_agent/policy/: engine.py
src/support_agent/tools/: approvals.py  backend.py  executor.py  registry.py
tests/: test_agent_loop.py  test_api.py  test_approvals.py  test_concurrency.py  test_policy.py
